# natural-questions-answer-model

./: .dvcignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  bert_model.py  dvc.yaml  gpt_model.py  main.py  pyproject.toml  run_experiment.py
configs/: config.yaml  dvc.yaml  params.yaml
models/: bert_model.py  gpt_model.py
scripts/: bert_model.py  data_loader.py  gpt_model.py  gpt_train.py  inference.py  vanilla_bert_benchmark.py  vanilla_gpt_benchmark.py
utils/: data_loader.py  mlflow_utils.py  mps_enable.py
