[project]
name = "nq-answer-model"
version = "0.1.0"
description = "This model is used for answer natural science questions."
authors = [
    {name = "vladimir-molotkov",email = "molotkov1vl@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytorch-lightning (>=2.5.1.post0,<3.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "transformers (>=4.52.4,<5.0.0)",
    "datasets (>=3.6.0,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "fire (>=0.7.0,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
