[project]
name = "natural-questions-answer-model"
version = "0.1.0"
description = ""
authors = [
    {name = "vladimir-molotkov",email = "molotkov1vl@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "pytorch-lightning (>=2.5.1.post0,<3.0.0)",
]

[tool.poetry.group.dev.dependencies]
fire = "^0.7.0"
tqdm = "^4.67.1"
accelerate = "^1.7.0"
tokenizers = "^0.21.1"
evaluate = "^0.4.3"
numpy = "^2.2.6"
pandas = "^2.3.0"
datasets = "^3.6.0"
transformers = "^4.52.4"
pre-commit = "^4.2.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
flake8-bugbear = "^24.12.12"
dvc = "^3.60.0"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
